Make variable private